--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,8 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    compileSdkVersion androidConf.compileSdk
+    buildToolsVersion androidConf.buildTools
 
     signingConfigs {
         release {
@@ -18,10 +18,10 @@ android {
 
     defaultConfig {
         applicationId "pw.zerobit.openbroccoli"
-        minSdkVersion 16
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion androidConf.minSdk
+        targetSdkVersion androidConf.targetSdk
+        versionCode appVersionCode
+        versionName appVersionStr
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -49,14 +49,15 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:${deps.kotlin}"
+    implementation "androidx.core:core-ktx:${deps.coreKtx}"
+    implementation "androidx.appcompat:appcompat:${deps.appcompat}"
+    implementation "com.google.android.material:material:${deps.material}"
+    implementation "androidx.constraintlayout:constraintlayout:${deps.constraintlayout}"
+    implementation "androidx.navigation:navigation-fragment-ktx:${deps.navigation}"
+    implementation "androidx.navigation:navigation-ui-ktx:${deps.navigation}"
+
+    testImplementation "junit:junit:${testDeps.junit}"
+    androidTestImplementation "androidx.test.ext:junit:${testDeps.androidTest}"
+    androidTestImplementation "androidx.test.espresso:espresso-core:${testDeps.espresso}"
 }
