--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,12 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.0"
+    apply from: 'buildSrc/config.gradle'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:${deps.androidBuildPlugin}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${deps.kotlinPlugin}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
