Add publishing plugin & config

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,15 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.github.triplet.play' version deps.publisherPlugin
+}
+
+play {
+    // Pass Service Account keys via the ANDROID_PUBLISHER_CREDENTIALS env variable
+    track.set("internal")
+    userFraction.set(1)
+    releaseStatus.set(ReleaseStatus.COMPLETED)
+    defaultToAppBundles.set(true)
 }
 
 android {
