--- a/buildSrc/config.gradle
+++ b/buildSrc/config.gradle
@@ -15,6 +15,7 @@ ext {
     deps = [
         kotlinPlugin      : "1.5.0",
         androidBuildPlugin: "4.2.1",
+        publisherPlugin   : "3.5.0",
         navigation        : "2.3.0",
         material          : "1.2.1",
         appcompat         : "1.2.0",
