Fix config.yml syntax again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,9 +45,8 @@ workflows:
     jobs:
       - build-and-test
       - deploy:
-        requires:
-          - build-and-test
-        filters:
-          branches:
-            only:
-              - release
+          requires:
+            - build-and-test
+          filters:
+            branches:
+              only: release
