--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:${deps.androidBuildPlugin}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${deps.kotlinPlugin}"
+        classpath "com.github.triplet.gradle:play-publisher:${deps.publisherPlugin}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
